bzip2ida/g0/uncompress
/data/output_dir/patch/bzip2/ida/gcc/O0/bzip2-gcc-O0/uncompress/src/bzip2.c:2010:22: error: use of undeclared identifier 'unk_41A38F'
v3 = ( const char *)&unk_41A38F; 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/bzip2/ida/gcc/O0/bzip2-gcc-O0/uncompress/src/obj/bzip2.o] Error 1
